--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
+    "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "rebass": "^4.0.7",
+    "redux-saga": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
