--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "server": "node server.js",
+        "server": "node api/server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
