--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "server": "node api/server.js",
+        "start:frontend": "react-scripts start",
+        "start:backend": "node api/server.js",
+        "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -46,5 +47,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "concurrently": "^8.2.1"
     }
 }
