--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,15 @@
             "source": "/(.*)",
             "destination": "api/server.js"
         }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "./index.js",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
+        }
     ]
 }
